apps/docs/v0.2.11/providers/overview.mdx
---
title: "Provider overview"
description: "How providers connect Rigkit workflows to VMs, terminals, host tools, cloud APIs, credentials, and custom resources."
noindex: true
---

Providers connect `rigkit/index.ts` to external systems: VMs, terminals, editors,
cloud CLIs, local tools, and host capabilities.

Most configs just add providers and call their runtime helpers:

```ts
import { workflow } from "@rigkit/sdk";
import { cmux } from "@rigkit/provider-cmux";
import { freestyle } from "@rigkit/provider-freestyle";

const app = workflow("website", {
  providers: {
    freestyle: freestyle.provider(),
    terminal: freestyle.terminal(),
    cmux: cmux.provider(),
  },
});
```

```ts
.task("prepare", async ({ freestyle }) => {
  const { vm, vmId } = await freestyle.client.vms.create({
    logger: console.log,
  });
  // ...
});
```

## Built-in providers

| Provider | Package | Use it for |
| --- | --- | --- |
| [Freestyle](/v0.2.11/providers/freestyle) | `@rigkit/provider-freestyle` | VMs, snapshots, SSH, cmux adapters, VS Code URLs. |
| [Terminal](/v0.2.11/providers/terminal) | `@rigkit/provider-freestyle` | Browser terminal sessions for login, SSH, and manual setup. |
| [cmux](/v0.2.11/providers/cmux) | `@rigkit/provider-cmux` | Opening local cmux workspaces from `rig run`. |
| [gcloud](/v0.2.11/providers/gcloud) | `@rigkit/provider-gcloud-cli` | Copying local `gcloud` auth/config files into a workspace. |

Need a provider for an internal system? See
[Creating providers](/v0.2.11/providers/creating-providers).

## Provider config

Provider config can read environment variables through `env(...)`:

```ts
import { env, workflow } from "@rigkit/sdk";
import { freestyle } from "@rigkit/provider-freestyle";

const app = workflow("website", {
  providers: {
    freestyle: freestyle.provider({
      apiKey: env.secret("FREESTYLE_API_KEY"),
    }),
  },
});
```

Rigkit loads `.env` from the selected project directory before loading
`rigkit/index.ts`. Resolved provider config is part of the provider fingerprint,
so changing it can make cached task runs stale.

## What providers own

Providers are responsible for:

- resolving config and authentication;
- creating typed runtime helpers for tasks, workspace hooks, and operations;
- storing provider implementation records;
- storing developer-machine credentials in host storage when needed;
- validating cached artifact refs when remote resources may disappear;
- requesting trusted host actions such as opening URLs or cmux workspaces.

Task context should still stay simple: return durable JSON such as `snapshotId`,
`vmId`, `repoPath`, `devPort`, or provider artifact refs shaped like
`{ provider, kind, ... }`.

See [Cache and state](/v0.2.11/concepts/cache-and-state) for where task context,
workspace context, provider storage, host storage, and global fragments live.
